automations/exercise-list/style.css
:root {
  --exercises_rows: 2;
  --primary-color: rgb(135, 203, 185);
  --secondary-color: rgb(86, 157, 170);
  --tertiary-color: rgb(185, 237, 221);
  --accent-color: rgb(87, 125, 134);

  --hover-bg-color: var(--secondary-color);
  --hover-font-color: white;

  --selected-bg: var(--accent-color);
  --selected-color: white;
}

body {
  max-width: 100% !important;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 0.04em;
  background-color: #FAFAFA;
}

.general {
  padding-top: 30px;
}

.btn, select {
    border: none;
    height: 40px;
    padding: 10px;
    margin-right: 15px;
    box-shadow: 2px 1px 2px 1px rgb(0 0 0 / 20%);
}


.btn-primary {
  background-color: var(--primary-color);
  color: white;
  font-weight: bold;
}

.btn:hover {
  background-color: var(--secondary-color);
  color: white;
}

.fieldset_remove_decoration {
  border: none !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
  padding-left: 0;
  display: flex !important;
  align-items: center;
  justify-content: space-between;
}

.remove_border {
  border: none !important;
}

.hide {
  display: none;
}

.no-margin{
  margin: 0;
}

.container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}
.pages {
  grid-column: 1 / 4;
}
.selected_exercises {
  display: grid;
  grid-template-columns: repeat(var(--exercises_rows), 1fr);
  font-size: 12px;
}

.selected_exercises .cell {
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.exercises {
  margin-left: 20px;
  transition-timing-function: ease-in-out;
    transition-delay: 1s;

}

.exercise_list_item {
  padding: 10px;
}
.exercise_list_item:hover {
  background-color: var(--hover-bg-color);
  color: var(--hover-font-color);
}

.recommendations, .notes {
  display: none;
}

.selected {
  background-color: var(--selected-bg);
  color: var(--selected-color);
  box-shadow: 2px 1px 2px 1px rgb(0 0 0 / 20%);
}

.exercise-config {
  display: flex;
  flex-wrap: wrap;
}

.align_baseline_elements {
  display: flex !important;
  align-items: baseline;
  justify-content: space-between;
}

.resize_vertical {
  resize: vertical;
}

#notesEditor {
  width: 100%;
}

.instructions {
  display: flex;
  margin-bottom: 10px;
  justify-content: center;
}

.instructions .image {
  height: 120px;
  width: 200px;
  display: flex;
  grid-column: 1;
  justify-content: center;
  align-self: center;
}

.instructions > ul {
  grid-column: 2 / 5;
}

.instructions .image img {
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
}

.options {
  display: flex;
  margin-bottom: 15px;
}
.border {
  border: 1px solid #303030;
}

.portrait {

}

.landscape {

}

.cols-1 {

}

.portrait .cols-2 {
  height: 320px;
  max-height: 320px
}

.cols-3 {

}

.cols-4 {

}

.instructions {

}

input:invalid {
  border: solid red 3px;
}

fieldset label {
  margin-right: 5px;
}

label[for] {
  font-style: italic;
}

.exercise-toggle {
  display: none;
}

@media only screen and (max-width: 768px) {
  .options {
    flex-wrap: wrap-reverse;
  }

  .pages {
    grid-column: 1 / 5;
  }
  .exercises {
    grid-column: 1 / 5;
    margin-left: 0;
    margin-top: 25px;
  }
  .instructions {
    flex-direction: column;
  }
  .exercises {
    position: fixed;
    top: 0;
    left: 0;
    background-color: #FAFAFA;
    width: 100vw;
    height: 92vh;
    padding: 10px;
    overflow-y: scroll;
    margin: 0;
  }
  .exercise-toggle {
    display: block;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100vw;
    margin: 0;
    height: 8vh;
    background-color: var(--secondary-color);
    filter: brightness(1.15);
    color: white;
    border: none;
    box-shadow: 2px 1px 2px 1px rgb(0 0 0 / 20%);
  }
  .exercises-toggle:active {
    background-color: var(--secondary-color);
    color: white;
  }
}
@media print {
  .container {
    width: 100%;
    display: block;
  }

  .selected_exercises {
    width: 100%;
  }

  .selected_exercises .cell {
    break-inside: avoid;
  }

  .exercises {

  }
  .notes {
    display: block;
  }
  .recommendations {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }

  .hide_on_print {
    display: none;
  }

  @page {
    margin: 1cm;
  }

  /* target left (even-numbered) pages only */
  @page :left {
    margin-right: 1cm;
  }

  /* target right (odd-numbered) pages only */
  @page :right {
    margin-left: 1cm;
  }
}

